[gd_scene load_steps=14 format=3 uid="uid://f5f0cra4vv3c"]

[ext_resource type="Script" uid="uid://bjbdpm2kmjtml" path="res://Script/Changing_Mirror.gd" id="1_eb2hk"]
[ext_resource type="Texture2D" uid="uid://bjjajqpualgwk" path="res://Sprite sheet/NEWSPRITESHEET.png" id="2_0tod6"]
[ext_resource type="Script" uid="uid://cy70asebt7toc" path="res://Script/kill_box.gd" id="3_8dw2w"]
[ext_resource type="PackedScene" uid="uid://d1tufnylu2iec" path="res://tscn/character_body_2d.tscn" id="5_paybu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_syq6g"]
atlas = ExtResource("2_0tod6")
region = Rect2(338, 0, 26, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3css"]
atlas = ExtResource("2_0tod6")
region = Rect2(196, 256, 28, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlyqy"]
atlas = ExtResource("2_0tod6")
region = Rect2(338, 32, 26, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tod6"]
atlas = ExtResource("2_0tod6")
region = Rect2(338, 64, 26, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_f5i7f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_syq6g")
}],
"loop": true,
"name": &"first mirror",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3css")
}],
"loop": true,
"name": &"fourth mirror",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlyqy")
}],
"loop": true,
"name": &"second mirror",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tod6")
}],
"loop": true,
"name": &"third mirror",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fng4u"]
size = Vector2(60, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dw2w"]
size = Vector2(42.25, 44.784943)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb2hk"]
size = Vector2(61, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_paybu"]
size = Vector2(36, 34)

[node name="GlassBevegelse" type="StaticBody2D"]
collision_layer = 5
collision_mask = 18
script = ExtResource("1_eb2hk")

[node name="Mirror" type="AnimatedSprite2D" parent="."]
position = Vector2(579.99994, 310.5)
scale = Vector2(2.4615383, 2.6571429)
sprite_frames = SubResource("SpriteFrames_f5i7f")
animation = &"first mirror"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(581, 312)
shape = SubResource("RectangleShape2D_fng4u")

[node name="Activate_Radius" type="Area2D" parent="."]
position = Vector2(579.99994, 310.5)
scale = Vector2(2.4615383, 2.6571429)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activate_Radius"]
modulate = Color(0.30639425, 0.6678538, 0.030069206, 1)
position = Vector2(3.0517578e-05, -0.37634277)
scale = Vector2(0.99999976, 1)
shape = SubResource("RectangleShape2D_8dw2w")

[node name="Killbox" type="Area2D" parent="."]
script = ExtResource("3_8dw2w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killbox"]
modulate = Color(0.8156863, 0, 0.47843137, 1)
position = Vector2(581.5, 311)
shape = SubResource("RectangleShape2D_eb2hk")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-1, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(593, 331)
shape = SubResource("RectangleShape2D_paybu")

[node name="Player" parent="." instance=ExtResource("5_paybu")]
position = Vector2(297, 268)

[connection signal="body_entered" from="Activate_Radius" to="." method="_on_activate_radius_body_entered"]
[connection signal="body_exited" from="Activate_Radius" to="." method="_on_activate_radius_body_exited"]
[connection signal="area_entered" from="Killbox" to="Killbox" method="_on_area_entered"]
